[package]
name = "psw"
version = "0.2.0"
authors = ["Wulfsta <wulfstawulfsta@gmail.com>"]
description = "Command line tool to write random bytes to stdout."
license = "MIT/Apache-2.0"
keywords = [ "prng", "stdout" ]
readme = "README.md"
homepage = "https://github.com/Wulfsta/psw"
repository = "https://github.com/Wulfsta/psw"

[dependencies]
clap = "2.34.0"
num = "0.4.3"
rand = "0.8.5"
rand_pcg = "0.3.1"
